--- a/设计文档.md
+++ b/设计文档.md
@@ -4,8 +4,9 @@
 
     1.mysql
     2.redis(lru策略使用allkeys-lru)
+    3.nginx + uwsgi + python3.5
 
-#### 需求分析
+#### 需求分析及mysql表结构
 
 1. 1000w用户，1000好友上限，符合正态分布
 
@@ -32,7 +33,7 @@
 
     1000w每天qps大约115/s 不算大
 
-    建立feed like 总数表，按feed_id 1000w区间分表
+    建立feed like 总数表，按feed_id 区间分表
     <pre><code>
     create table feed_stat(
     feed_id bigint,
@@ -52,28 +53,9 @@
     );
     </code></pre>
 
-3. 每秒like计数器查询量为30万次/秒。会查询like次数，like用户列表
+3. 每秒like计数器查询量为30万次/秒。会查询like次数，like用户列表，优先显示我的好友列表
 
-    这个qps很大，采用分页，递增发送，每次发送50个
-
-4. 优先显示我的好友列表
-
-    用空间换时间的做法，有一个人点赞了，把他所有好友的信息都加入表中，新建一张表
-    <pre><code>
-    create table feed_friend_like(
-    id bigint  NOT NULL auto_increment,
-    feed_id bigint,
-    uid bigint,
-    friend_like_uid bigint,
-    ctime timestamp,
-    PRIMARY KEY  (id),
-    unique index id(feed_id, friend_like_uid)
-    );
-    </code></pre>
-    假设平均好友是100，所以每天会新增10亿的数据，是个问题。
-    显示的时候，先从此表读取数据，数据量不大，然后再读取feed_like做去重（这个去重我更倾向于在前端完成）
-
-    如果已经请求到非好友用户列表了，就不会把现有的like好友加入进来，除非重新开始请求
+    好友数不多，先取到好友列表，然后再去feed_like表中查询，每次请求的时候，分页递增返回，每次返回的点赞数量不一定（方便缓存的设计）
 
 6. 重复点赞
 
@@ -84,6 +66,35 @@
     这些发生频率并不会高，发生时，修改所有相关mysql和redis数据
 
     总结特征就是写入频率不高，读取频率高
+
+#### 缓存设计
+命中的时候写入redis，分4种情况
+
+1. 总数:
+
+        key: <string>:feed_id
+        value: <int>:total (点赞总数)
+        需要跟着mysql一起更新
+
+2. 好友列表:
+
+        key: <string>: user_id
+        value: <list> friend_list
+        需要跟着mysql一起更新
+
+3. 好友点赞列表:
+
+        key: <string>: feed_id~user_id~1
+        value: <list>: user_list
+        每次有一条点赞，更新他所有好友的数据
+
+4. 非好友点赞列表
+
+        key: <string>: feed_id~user_id~0~max_id
+        value: <list>: user_list
+        命中后缓存
+
+redis的lru策略使用allkeys-lru
 
 #### RESTful接口
 
@@ -113,24 +124,33 @@
             "status": "Success",
             "total": 100,
             "data": [1, 3, 5, 10]
+            "max_id": 10
+            "is_friend": 0
         }
+        max_id, is_friend为新数据最后一个的状态，以便继续读取数据
     </code></pre>
 
-#### 整体架构
+#### 分布式设计
 
-1. 单机
+    还是比较容易实现分布式的，
+    feed相关的表按照id range分表，
+    好友关系按照from_uid range分表，
 
-    按上面的描述搭建mysql表, redis只用做缓存，因为like总数是变化的，所以redis也要每次更新，好友列表redis也是变化的，所以也要每次更新，非好友用户列表不需要变化，不需要更新，redis的lru策略使用allkeys-lru
+#### 项目进度
 
-2. 分布式
-
-    还是比较容易实现分布式的，feed相关的表按照id range分表，用主从的方式设置读写分离，好友关系暂时按照from_uid range, like操作时总数的redis和好友list都更新所有实例，非好友list不需要更新
+    完成：
+        mysql表，数据插入
+        demo
+        测试
+    未完成：
+        缓存代码
+        优化
+        项目布置脚本
 
 #### 优缺点分析
     优点
-    1. 易于实现，易于扩展
+    1. 易于实现
 
     缺点
     1. 如果请求点赞list已经到了非好友页，新增的好友点赞就会看不到
-    2. 好友关系不容易拆分，feed_friend_like表过大
-    3. feed_like, fedd_friend_like都按照id分表，就无法快速取到user是否like feed这个状态，除非再新建一张表
+    2. 按照user_id, feed_id的表拆分，数据分布很有可能不均匀
