--- a/设计文档.md
+++ b/设计文档.md
@@ -55,7 +55,7 @@
 
 3. 每秒like计数器查询量为30万次/秒。会查询like次数，like用户列表，优先显示我的好友列表
 
-    好友数不多，先取到好友列表，然后再去feed_like表中查询，每次请求的时候，分页递增返回，每次返回的点赞数量不一定（方便缓存的设计）
+    好友数不多，先取到好友列表，然后再去feed_like表中查询，每次请求的时候，好友一次全部返回，非好友分页递增返回，每次返回的点赞数量不一定（方便缓存的设计）
 
 6. 重复点赞
 
@@ -78,20 +78,21 @@
 
 2. 好友列表:
 
-        key: <string>: user_id
-        value: <list> friend_list
+        key: <string>: friends_{user_id}
+        value: <list> 
         需要跟着mysql一起更新
 
 3. 好友点赞列表:
 
-        key: <string>: feed_id~user_id~1
-        value: <list>: user_list
+        key: <string>: feed_friend_like_{feed_id}_{user_id}
+        value: <list>
         每次有一条点赞，更新他所有好友的数据
 
 4. 非好友点赞列表
 
-        key: <string>: feed_id~user_id~0~max_id
-        value: <list>: user_list
+        key: <string>: feed_non_friend_like_{feed_id}_{user_id}_{max_id}
+        value: <list>
+        max_id表示当前的最大id值
         命中后缓存
 
 redis的lru策略使用allkeys-lru
@@ -104,7 +105,6 @@ redis的lru策略使用allkeys-lru
     POST请求
     参数:
         {
-            action: 操作的类型
             feed_id: feed的id值
             user_id: 用户id
         }
@@ -113,19 +113,18 @@ redis的lru策略使用allkeys-lru
 
 2. 显示like总数和用户列表
     <pre><code>
-    /v1/feed/<feed_id>
+    /v1/feed/<feed_id>/likes
     GET请求
     参数:
         user_id: 用户的user_id
-        max_id: 当前用户列表的最大编号
-        is_friend: 最后一个user是否是好友
+        max_id: 当前用户列表的最大编号(用来分页)
+        is_friend: 是否是好友数据
     返回:
         {
             "status": "Success",
             "total": 100,
             "data": [1, 3, 5, 10]
             "max_id": 10
-            "is_friend": 0
         }
         max_id, is_friend为新数据最后一个的状态，以便继续读取数据
     </code></pre>
@@ -139,11 +138,12 @@ redis的lru策略使用allkeys-lru
 #### 项目进度
 
     完成：
-        mysql表，数据插入
-        demo
-        测试
+        mysql表，简单数据插入
+        restful接口
+        加入缓存
+        测试脚本(不用缓存，单机uwsgi 8进程，100qps)
     未完成：
-        缓存代码
+        更加完善的测试，测试redis超过设置的内存大小
         优化
         项目布置脚本
 
@@ -154,3 +154,4 @@ redis的lru策略使用allkeys-lru
     缺点
     1. 如果请求点赞list已经到了非好友页，新增的好友点赞就会看不到
     2. 按照user_id, feed_id的表拆分，数据分布很有可能不均匀
+
