--- a/设计文档.md
+++ b/设计文档.md
@@ -141,17 +141,16 @@ redis的lru策略使用allkeys-lru
         mysql表，简单数据插入
         restful接口
         加入缓存
-        测试脚本(不用缓存，单机uwsgi 8进程，100qps)
+        测试脚本(不用缓存，单机uwsgi 8进程，100qps，加上redis数据命中就很快，需要把数据模拟的更像真实环境，再深入测试)
     未完成：
         更加完善的测试，测试redis超过设置的内存大小
-        优化
+        优化(单独搞个线程更新redis数据)
         项目布置脚本
 
 #### 优缺点分析
     优点
-    1. 易于实现
+    1. 易于实现和扩展
 
     缺点
     1. 如果请求点赞list已经到了非好友页，新增的好友点赞就会看不到
     2. 按照user_id, feed_id的表拆分，数据分布很有可能不均匀
-
