--- a/设计文档.md
+++ b/设计文档.md
@@ -113,7 +113,7 @@ redis的lru策略使用allkeys-lru
 
 2. 显示like总数和用户列表
     <pre><code>
-    /v1/feed/<feed_id>/likes
+    /v1/feed/\<feed_id\>/likes
     GET请求
     参数:
         user_id: 用户的user_id
