--- a/设计文档.md
+++ b/设计文档.md
@@ -79,7 +79,7 @@
 2. 好友列表:
 
         key: <string>: friends_{user_id}
-        value: <list> 
+        value: <list>
         需要跟着mysql一起更新
 
 3. 好友点赞列表:
@@ -109,24 +109,28 @@ redis的lru策略使用allkeys-lru
             user_id: 用户id
         }
     返回: {"status": "Success"}
+    请求样例:
+    curl -XPOST 'http://127.0.0.1:5000/v1/feed' -d 'feed_id=1&user_id=1'
     </code></pre>
 
 2. 显示like总数和用户列表
     <pre><code>
-    /v1/feed/\<feed_id\>/likes
+    /v1/feed/< feed_id >/likes
     GET请求
     参数:
-        user_id: 用户的user_id
-        max_id: 当前用户列表的最大编号(用来分页)
-        is_friend: 是否是好友数据
+    user_id: 用户的user_id
+    max_id: 当前用户列表的最大编号(用来分页)
+    is_friend: 是否是好友数据
     返回:
-        {
-            "status": "Success",
-            "total": 100,
-            "data": [1, 3, 5, 10]
-            "max_id": 10
-        }
-        max_id, is_friend为新数据最后一个的状态，以便继续读取数据
+    {
+        "status": "Success",
+        "total": 100,
+        "data": [1, 3, 5, 10]
+        "max_id": 10
+    }
+    max_id, is_friend为新数据最后一个的状态，以便继续读取数据
+    请求样例:
+    curl -XGET 'http://127.0.0.1:5000/v1/feed/10/likes?max_id=0&user_id=101&is_friend=1&max_id=0'
     </code></pre>
 
 #### 分布式设计
